--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -1,4 +1,22 @@
-<section class="about">
+<section class="about about-intro">
     <h1>О компании PAYHUB24</h1>
-    <p>Мы — ведущий провайдер платежных решений с международным охватом.</p>
+    <p>PAYHUB24 — это инновационная платёжная платформа, обеспечивающая быстрые и безопасные финансовые операции.</p>
+</section>
+
+<section class="about-details">
+    <div class="about-card">
+        <i class="fas fa-shield-alt"></i>
+        <h2>Надёжность</h2>
+        <p>Мы гарантируем безопасность всех транзакций благодаря передовым технологиям защиты данных.</p>
+    </div>
+    <div class="about-card">
+        <i class="fas fa-rocket"></i>
+        <h2>Скорость</h2>
+        <p>Наши системы работают без задержек, обеспечивая мгновенные платежи по всему миру.</p>
+    </div>
+    <div class="about-card">
+        <i class="fas fa-handshake"></i>
+        <h2>Партнёрство</h2>
+        <p>Сотрудничаем с ведущими компаниями и банками, обеспечивая лучший сервис.</p>
+    </div>
 </section>
