--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
 
   <!-- AOS CSS (для анимаций, опционально) -->
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css" />
+  <!-- Подключение стилей Swiper -->
+
 </head>
 <body>
   <header>
@@ -53,8 +55,7 @@
     <p>© 2025 PAYHUB24. Все права защищены.</p>
   </footer>
 
-  <!-- JS для SPA и бургер-меню -->
-  <script src="js/script.js"></script>
+
 
   <!-- Скрипт для смены фонового изображения -->
   <script>
@@ -94,6 +95,7 @@
       once: true,
     });
   </script>
-  
+    <!-- JS для SPA и бургер-меню -->
+    <script src="js/script.js"></script>
 </body>
 </html>
