--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -1,16 +1,15 @@
 <section class="contact">
-    <h1 data-aos="fade-up">Свяжитесь с нами</h1>
-    <form id="contactForm" data-aos="fade-up" data-aos-delay="100">
-      <label for="name">Имя:</label>
-      <input type="text" id="name" name="name" required />
-  
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required />
-  
-      <label for="message">Сообщение:</label>
-      <textarea id="message" name="message" required></textarea>
-  
-      <button type="submit">Отправить</button>
-    </form>
-  </section>
-  
+  <h1 class="contact__title" data-aos="fade-up">Свяжитесь с нами</h1>
+  <form id="contactForm" class="contact__form" data-aos="fade-up" data-aos-delay="100">
+      <label class="contact__label" for="name">Имя:</label>
+      <input class="contact__input" type="text" id="name" name="name" required />
+
+      <label class="contact__label" for="email">Email:</label>
+      <input class="contact__input" type="email" id="email" name="email" required />
+
+      <label class="contact__label" for="message">Сообщение:</label>
+      <textarea class="contact__textarea" id="message" name="message" required></textarea>
+
+      <button class="contact__button" type="submit">Отправить</button>
+  </form>
+</section>
