--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -1,6 +1,6 @@
 <section class="contact">
   <h1 class="contact__title" data-aos="fade-up">Свяжитесь с нами</h1>
-  <form id="contactForm" class="contact__form" data-aos="fade-up" data-aos-delay="100">
+  <!-- <form id="contactForm" class="contact__form" data-aos="fade-up" data-aos-delay="100">
       <label class="contact__label" for="name">Имя:</label>
       <input class="contact__input" type="text" id="name" name="name" required />
 
@@ -11,5 +11,16 @@
       <textarea class="contact__textarea" id="message" name="message" required></textarea>
 
       <button class="contact__button" type="submit">Отправить</button>
-  </form>
+  </form> -->
+  <p class="contact__text" data-aos="fade-up" data-aos-delay="100">
+    Если у вас есть вопросы или предложения, пожалуйста, не стесняйтесь связаться с нами по адресу:
+  </p>
+  <p class="contact__email" data-aos="fade-up" data-aos-delay="200">
+    <a href="mailto:fxittechnology@gmail.com" class="contact__email-link">fxittechnology@gmail.com</a>
+  </p>
+  <p class="contact__text" data-aos="fade-up" data-aos-delay="300">
+    Мы будем рады ответить на ваши вопросы!
+  </p>
 </section>
+
+ 
