--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -2,7 +2,7 @@
     <div class="hero-content">
       <h1>PAYHUB24 — Мощная платформа для платежей</h1>
       <p>Принимайте платежи со всего мира быстро и безопасно</p>
-      <button class="btn btn-cta">Попробовать сейчас</button>
+      <a href="https://api.payhub24.com/api_doc/" class="btn btn-cta">Попробовать сейчас</a>
     </div>
   </section>
   
