--- a/public/index.html
+++ b/public/index.html
@@ -61,12 +61,17 @@
   <script>
     document.addEventListener("DOMContentLoaded", function() {
       // Массив с путями к вашим изображениям
-      const images = [
-        '/images/minimalism/image1.png',
-        '/images/minimalism/image2.png',
-        '/images/minimalism/image3.png',
-        '/images/minimalism/image4.png',
-        '/images/minimalism/image5.png'
+    //   const images = [
+    //     '/images/minimalism/image1.png',
+    //     '/images/minimalism/image2.png',
+    //     '/images/minimalism/image3.png',
+    //     '/images/minimalism/image4.png',
+    //     '/images/minimalism/image5.png'
+    //   ];
+    const images = [
+        '/images/blockchain/img1.webp',
+        '/images/blockchain/img2.webp',
+        '/images/blockchain/img3.webp',
       ];
       
       // Функция для смены фонового изображения
